# eeg-continual

./: CITATION.cff  LICENSE  README.md  pyproject.toml
ckpts/: results.csv
ckpts/finetuning/: subject_01-session_01.ckpt  subject_01-session_02.ckpt  subject_01-session_03.ckpt  subject_01-session_04.ckpt  subject_01-session_05.ckpt  subject_01-session_06.ckpt  subject_01-session_07.ckpt  subject_01-session_08.ckpt  subject_01-session_09.ckpt  subject_01-session_10.ckpt
ckpts/source/: config.yaml  subject_01.ckpt
configs/: basenet.yaml  causal_eval.yaml  finetune.yaml
data/: README.md
src/eeg_continual/: __init__.py  causal_evaluation.py  finetuning.py  source_training.py
src/eeg_continual/datamodules/: __init__.py  stieger_datamodules.py  stieger_datasets.py  window_dataset.py
src/eeg_continual/models/: __init__.py  basenet.py  classification_module.py  custom_bn.py
src/eeg_continual/tta/: __init__.py  alignment.py  base.py  norm.py
src/eeg_continual/utils/: alignment.py  load_data.py  metrics.py  print_results.py
