[project]
name = "eeg-continual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "martinwimpff", email = "ac132249@uni-stuttgart.de" }
]
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "mne>=1.9.0",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pytorch-lightning==2.0.7",
    "ruff>=0.9.6",
    "scipy>=1.15.1",
    "torch==2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
